--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
 
-    <title>Kamakama |  A cleaning service for all your commercial and Home needss</title>
+    <title>Kamakama | A cleaning service for all your commercial and Home needss</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,9 +15,10 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
     <link href="css/theme.css" rel="stylesheet" type="text/css" media="all"/>
     <!--[if gte IE 9]>
-    <link rel="stylesheet" type="text/css" href="css/ie9.css" />
+    <link rel="stylesheet" type="text/css" href="css/ie9.css"/>
     <![endif]-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700'
+          rel='stylesheet' type='text/css'>
     <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
@@ -53,11 +53,11 @@
 
                 <div class="col-sm-9 col-md-10 columns">
                     <ul class="menu">
-                        <li ><a href="#Service">Services</a></li>
-                        <li ><a href="#Review">Review</a></li>
-                        <li ><a href="#Why-use">Why Use</a></li>
-                        <li ><a href="#About-us">About Us</a></li>
-                        <li ><a href="#Team">Team</a></li>
+                        <li><a href="#Service">Services</a></li>
+                        <li><a href="#Review">Review</a></li>
+                        <li><a href="#Why-use">Why Use</a></li>
+                        <li><a href="#About-us">About Us</a></li>
+                        <li><a href="#Team">Team</a></li>
                     </ul>
                 </div>
             </div><!--end of row-->
@@ -81,7 +81,9 @@
                 <div class="col-md-12 text-center">
                     <h1 class="text-white">Cleanliness is the Hallmark of Perfect Standards .</h1>
                     <p class="lead text-white"><strong>Trusted, Consistent and Friendly</strong></p>
-                    <a target="_blank" href="https://docs.google.com/forms/d/1-W2PkmkHwVlTb8nAvOciY_szDeSeU0Bu5NqMGAvfDWs/edit" class="btn btn-primary btn-white">Book Now</a>
+                    <a target="_blank"
+                       href="https://docs.google.com/forms/d/1-W2PkmkHwVlTb8nAvOciY_szDeSeU0Bu5NqMGAvfDWs/edit"
+                       class="btn btn-primary btn-white">Book Now</a>
                     <a href="#" class="btn btn-primary btn-filled" target="_blank">See Pricing</a>
                 </div>
             </div><!--end of row-->
@@ -93,7 +95,7 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text-center">
                     <span class="text-white alt-font"></span>
-                    <h1 class="text-black" >Services</h1>
+                    <h1 class="text-black">Services</h1>
                 </div>
             </div><!--end of row-->
 
@@ -101,8 +103,11 @@
                 <div class="col-sm-4">
                     <div class="feature feature-icon-large">
                         <i class="text-white  icon_house"></i>
-                        <h5 class="text-black">    Residential Cleaning</h5>
-                        <p class="text-black">Our goal is to leave your home with an aura of pleasant cleanliness. A cleanliness within which you can find the comfort, peace of mind and the you time that only home gives you.If pleasant cleanliness is what you are after, clicking on the button below takes you a step closer to getting it .</p>
+                        <h5 class="text-black"> Residential Cleaning</h5>
+                        <p class="text-black">Our goal is to leave your home with an aura of pleasant cleanliness. A
+                            cleanliness within which you can find the comfort, peace of mind and the you time that only
+                            home gives you.If pleasant cleanliness is what you are after, clicking on the button below
+                            takes you a step closer to getting it .</p>
                     </div>
                 </div>
 
@@ -111,15 +116,20 @@
                         <i class="text-white icon  icon_building"></i>
                         <h5 class="black"> Commercial Cleaning</h5>
                         <p class="text-black">
-                            We create an aura of cleanliness that aspires to the quality delivered by your company. Our goal is to positively influence the mindset of employees by providing a clean working environment devoid of dirt related distractions and discomforts												.</p>
+                            We create an aura of cleanliness that aspires to the quality delivered by your company. Our
+                            goal is to positively influence the mindset of employees by providing a clean working
+                            environment devoid of dirt related distractions and discomforts .</p>
                     </div>
                 </div>
 
                 <div class="col-sm-4">
                     <div class="feature feature-icon-large">
                         <i class="text-white icon icon_trash"></i>
-                        <h5 class="text-black">   After Events</h5>
-                        <p class="text-black"></p>The last thing anyone wants to do after some drinks, great conversation and dance moves is cleaning,whether that night or the morning after. Knowing this,we are willing to clean your footprinted floors, pick up the shattered bottles and clean all your cutlery.Leaving your space so clean all you'll have are memories of the party.</p>
+                        <h5 class="text-black"> After Events</h5>
+                        <p class="text-black"></p>The last thing anyone wants to do after some drinks, great
+                        conversation and dance moves is cleaning,whether that night or the morning after. Knowing
+                        this,we are willing to clean your footprinted floors, pick up the shattered bottles and clean
+                        all your cutlery.Leaving your space so clean all you'll have are memories of the party.</p>
                     </div>
                 </div>
             </div><!--end of row-->
@@ -132,20 +142,24 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="testimonials-slider text-center" >
+                <div class="testimonials-slider text-center">
                     <ul class="slides">
                         <li>
-                            <p class="text-white lead">Kamakama has been nothing but professional. I do not recall the last time!</p>
+                            <p class="text-white lead">Kamakama has been nothing but professional. I do not recall the
+                                last time!</p>
                             <span class="author text-white">Louise Duke - Mother Goose</span>
                         </li>
 
                         <li>
-                            <p class="text-white lead">I never had to take out a handkerchief to clean my desk. It's always spot on clean. Superb Work.".</p>
+                            <p class="text-white lead">I never had to take out a handkerchief to clean my desk. It's
+                                always spot on clean. Superb Work.".</p>
                             <span class="author text-white">Jones Ofori-Boadu - Devtraco Villa</span>
                         </li>
 
                         <li>
-                            <p class="text-white lead">“These kids are troublesome. I found cheese in my wardrobe thanks to the thorough cleaning of kamakama team. My oven is spick and span. Now I know who to trust with the thorough cleaning of home”.!</p>
+                            <p class="text-white lead">“These kids are troublesome. I found cheese in my wardrobe thanks
+                                to the thorough cleaning of kamakama team. My oven is spick and span. Now I know who to
+                                trust with the thorough cleaning of home”.!</p>
                             <span class="author text-white">Toby Whittaker - Design Dojo</span>
                         </li>
                     </ul>
@@ -159,7 +173,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center" >
+            <div class="col-md-12 text-center">
                 <h1> Why Use Kamakama</h1>
             </div>
         </div><!--end of row-->
@@ -201,7 +215,7 @@
                     <div class="pull-right">
                         <h5>Security</h5>
                         <p>
-                            Our cleaners are vetted to ensure your  property is safe.	</p>
+                            Our cleaners are vetted to ensure your property is safe. </p>
                     </div>
                 </div>
             </div><!--end 6 col-->
@@ -212,14 +226,16 @@
 
 </section>
 
-<section class="pure-text-centered"  id="About-us">
+<section class="pure-text-centered" id="About-us">
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
 
                 <h1><strong>About Us</strong></h1>
                 <p class="lead">
-                    Kamakama is a client-focused cleaning company providing professional cleaning services to our clients big and small in a timely and consistent manner. We are dedicated to serving our clients well and our commitment is to keep spaces spick and span at all times.
+                    Kamakama is a client-focused cleaning company providing professional cleaning services to our
+                    clients big and small in a timely and consistent manner. We are dedicated to serving our clients
+                    well and our commitment is to keep spaces spick and span at all times.
                 </p>
             </div>
         </div><!--end of row-->
@@ -227,7 +243,7 @@
     </div><!--end of container-->
 </section>
 
-<section class="image-divider overlay duplicatable-content"  id="Team">
+<section class="image-divider overlay duplicatable-content" id="Team">
     <div class="background-image-holder parallax-background">
         <img class="background-image" alt="Background Image" src="img/mama.png">
     </div>
@@ -240,8 +256,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
-                    <p class="text-white" style="font-size:17px" >
-                        We are an ambitious and driven team with an affinity for cleanliness. Combining our love for clean spaces and value creation, our goal is to clean your facility efficiently, professionally and safely.
+                    <p class="text-white" style="font-size:17px">
+                        We are an ambitious and driven team with an affinity for cleanliness. Combining our love for
+                        clean spaces and value creation, our goal is to clean your facility efficiently, professionally
+                        and safely.
 
                         Kamakama offers includes commercial office cleaning, residential house
                         cleaning, after events , carpet cleaning & move in-move out.
