--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Kamakama | A cleaning service for all your commercial and Home needss</title>
+    <title>Nanashomes | A cleaning service for all your commercial and Home needss</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -145,7 +145,7 @@
                 <div class="testimonials-slider text-center">
                     <ul class="slides">
                         <li>
-                            <p class="text-white lead">Kamakama has been nothing but professional. I do not recall the
+                            <p class="text-white lead">Nanashomes has been nothing but professional. I do not recall the
                                 last time!</p>
                             <span class="author text-white">Louise Duke - Mother Goose</span>
                         </li>
@@ -158,7 +158,7 @@
 
                         <li>
                             <p class="text-white lead">“These kids are troublesome. I found cheese in my wardrobe thanks
-                                to the thorough cleaning of kamakama team. My oven is spick and span. Now I know who to
+                                to the thorough cleaning of nanashomes team. My oven is spick and span. Now I know who to
                                 trust with the thorough cleaning of home”.!</p>
                             <span class="author text-white">Toby Whittaker - Design Dojo</span>
                         </li>
@@ -174,7 +174,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h1> Why Use Kamakama</h1>
+                <h1> Why Use Nanashomes</h1>
             </div>
         </div><!--end of row-->
 
@@ -233,7 +233,7 @@
 
                 <h1><strong>About Us</strong></h1>
                 <p class="lead">
-                    Kamakama is a client-focused cleaning company providing professional cleaning services to our
+                    Nanashomes is a client-focused cleaning company providing professional cleaning services to our
                     clients big and small in a timely and consistent manner. We are dedicated to serving our clients
                     well and our commitment is to keep spaces spick and span at all times.
                 </p>
@@ -250,7 +250,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-8 col-sm-offset-2 text-center"><h1 class="text-white">Kamakama Team</h1></div>
+            <div class="col-sm-8 col-sm-offset-2 text-center"><h1 class="text-white">Nanashomes Team</h1></div>
         </div><!--end of row-->
 
         <div class="container">
@@ -261,7 +261,7 @@
                         clean spaces and value creation, our goal is to clean your facility efficiently, professionally
                         and safely.
 
-                        Kamakama offers includes commercial office cleaning, residential house
+                        Nanashomes offers includes commercial office cleaning, residential house
                         cleaning, after events , carpet cleaning & move in-move out.
                     </p>
                     <br>
@@ -294,7 +294,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-10">
-                    <span class="sub">© Copright 2018 Kamakama</span>
+                    <span class="sub">© Copright 2018 Nanashomes</span>
                     <ul>
                         <li><a href="#">Terms Of Use</a></li>
                         <li><a href="#">FAQ</a></li>
